Bug fix: Search box overlaps Guided Answers title on reducing width (#112)
* bug(109): media queries added

* chore(109): changeset added

* fix(109): apply code review changes

--- a/packages/webapp/src/webview/ui/components/App/App.scss
+++ b/packages/webapp/src/webview/ui/components/App/App.scss
@@ -68,7 +68,7 @@ h1 {
 
 .striped-list {
     padding-left: 0;
-    margin-top: 45px;
+    margin-top: 40px;
 }
 
 ul.striped-list > li:nth-of-type(odd) {
